<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
<LinearLayout
    android:layout_width="@dimen/zero_dp"
    android:layout_weight="1"
    android:layout_height="@dimen/three_eight_zero_dp"
    android:orientation="vertical">
    <ImageView
        android:contentDescription="@string/imageDes"
        android:layout_width="@dimen/one_five_zero_dp"
        android:layout_height="@dimen/two_zero_zero_dp"
        android:src="@drawable/gate"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:layout_marginTop="30dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/three_zero_dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/one_eight_sp"
            android:text="@string/famous_in_asr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/kesar_dhaba"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/gain_lassi"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/bhrawan_da_dhaba"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/kulcha"/>


    </LinearLayout>

</LinearLayout>
<LinearLayout
    android:layout_width="@dimen/zero_dp"
    android:layout_weight="1"
    android:layout_height="@dimen/three_eight_zero_dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:layout_marginTop="@dimen/top_margin"
        android:textColor="@android:color/holo_orange_light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punjab"
        android:textColor="@android:color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_language"
        android:layout_marginTop="@dimen/top_margin"
        android:textColor="@android:color/holo_orange_light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punjabi"
        android:textColor="@android:color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_airport"
        android:layout_marginTop="@dimen/top_margin"
        android:textColor="@android:color/holo_orange_light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airpot_name"
        android:textColor="@android:color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_trans"
        android:layout_marginTop="@dimen/top_margin"
        android:textColor="@android:color/holo_orange_light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transport_mode"
        android:textColor="@android:color/white" />

</LinearLayout>
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/six_five_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:textColor="@android:color/white"
            android:text="@string/about_asr"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginStart="@dimen/five_dp"
        android:layout_marginEnd="@dimen/five_dp"
        android:text="@string/about" />
    </LinearLayout>
</ScrollView>